[gd_scene load_steps=26 format=3 uid="uid://cp5syrb2ckqss"]

[ext_resource type="Texture2D" uid="uid://dvw0iq8m8qslq" path="res://assets/sprites/RAT_SPRITESHEET.png" id="1_1l88y"]
[ext_resource type="Script" uid="uid://bspv3injpg76k" path="res://scripts/rat.gd" id="1_77a1s"]
[ext_resource type="Texture2D" uid="uid://bamvwa0btjhnn" path="res://Abyss of oblivion assets workshop/pixilart-sprite.png" id="3_acf8p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77a1s"]
size = Vector2(16, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_acf8p"]
atlas = ExtResource("1_1l88y")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3csnj"]
atlas = ExtResource("1_1l88y")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s34g"]
atlas = ExtResource("1_1l88y")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_368s2"]
atlas = ExtResource("1_1l88y")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnna8"]
atlas = ExtResource("1_1l88y")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_po2hf"]
atlas = ExtResource("1_1l88y")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g0h3"]
atlas = ExtResource("1_1l88y")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ux2h"]
atlas = ExtResource("1_1l88y")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdlk1"]
atlas = ExtResource("1_1l88y")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bnys"]
atlas = ExtResource("1_1l88y")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc3ue"]
atlas = ExtResource("1_1l88y")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucpu4"]
atlas = ExtResource("1_1l88y")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_myae6"]
atlas = ExtResource("3_acf8p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8fq5"]
atlas = ExtResource("3_acf8p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkgqy"]
atlas = ExtResource("3_acf8p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2y1h"]
atlas = ExtResource("3_acf8p")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0rjm"]
atlas = ExtResource("3_acf8p")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3ywk"]
atlas = ExtResource("3_acf8p")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_myae6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_acf8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3csnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s34g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_368s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnna8")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_po2hf")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6s34g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acf8p")
}],
"loop": true,
"name": &"ATTACK",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g0h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ux2h")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_fdlk1")
}],
"loop": true,
"name": &"DIE",
"speed": 4.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_7bnys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc3ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucpu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc3ue")
}],
"loop": true,
"name": &"SLEEP",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_myae6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8fq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkgqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2y1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkgqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2y1h")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_a0rjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3ywk")
}],
"loop": false,
"name": &"climb",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_u8fq5"]
radius = 40.0031

[sub_resource type="CircleShape2D" id="CircleShape2D_acf8p"]
radius = 75.0017

[node name="RAT" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_77a1s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_77a1s")

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-7, 10)
sprite_frames = SubResource("SpriteFrames_myae6")
animation = &"SLEEP"
frame = 2
frame_progress = 0.306516
offset = Vector2(7, -10)

[node name="hear_zone" type="Area2D" parent="."]
z_index = -1
position = Vector2(0, 2.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hear_zone"]
shape = SubResource("CircleShape2D_u8fq5")
debug_color = Color(0, 0.63, 0.4095, 0.603922)

[node name="forget_zone" type="Area2D" parent="."]
z_index = -2
position = Vector2(0, 2.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="forget_zone"]
shape = SubResource("CircleShape2D_acf8p")
debug_color = Color(0.955551, 0.212465, 5.77569e-07, 0.42)

[node name="attack_timer" type="Timer" parent="."]

[node name="climb_time" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="hear_zone" to="." method="_on_hear_zone_body_entered"]
[connection signal="body_exited" from="forget_zone" to="." method="_on_forget_zone_body_exited"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="climb_time" to="." method="_on_climb_time_timeout"]
